<resources>
    <string name="app_name">学习</string>
    <string name="knowledge_hint">不学习一下吗?</string>
    <string name="knowledge_save_empty">保存时,知识不能没有任何编辑!</string>
    <string name="knowledge_save_success">保存成功了,您可以继续编辑更多的知识!</string>
    <string name="knowledge_save_fail">保存失败了,n您可以卸载掉这个垃圾软件了!</string>
    <string name="knowledge_delete_success">删除成功了,您可以继续增加知识了!</string>
    <string name="knowledge_delete_fail">删除失败了,这一定是我的错,我改!</string>
    <string name="knowledge_examine_title">查看所有知识</string>
    <string name="knowledge_update_title">完善已有的知识</string>
    <string name="function_no_open">功能还没有开发,可以拷贝下源码,自己超越作者!</string>
    <string name="dialog_examine_title">功能表</string>
    <string name="dialog_operate_title">操作表</string>
    <string name="dialog_insert_child_title">添加下子项吧!</string>
    <string name="dialog_move_child_title">要移动子项了吗!</string>
    <string name="dialog_update_hint">更新</string>
    <string name="dialog_delete_hint">删除</string>
    <string name="dialog_look_hint">查看</string>
    <string name="dialog_advanced_hint">进阶</string>
    <string name="dialog_move_hint">移动</string>
    <string name="dialog_tidy_hint">整理</string>
    <string name="dialog_insert_hint">添加</string>
    <string name="dialog_mileage_hint">里程</string>
    <string name="knowledge_query_fail">查询为空,这需要你来处理!</string>
    <string name="knowledge_query_error">查询失败,这一定是我的错,说明作者遇到未知了!</string>
    <string name="knowledge_query_empty">查询不到说明?你还不快去增加一些知识!</string>
    <string name="knowledge_look_title">查看具体知识</string>
    <string name="knowledge_update_empty">如果保存空知识,你应该点击返回键!</string>
    <string name="knowledge_update_equals">不想修改知识,不,你想修改!</string>
    <string name="knowledge_update_success">保存成功了,我想您应该是要冲击知识进阶吧!</string>
    <string name="knowledge_update_fail">保存失败了,再试一次吧,不行在卸载!</string>
    <string name="knowledge_insert_hint">试着分一下类吧!</string>
    <string name="knowledge_insert_success">既然成功了,就再成功一次吧!</string>
    <string name="knowledge_insert_fail">没事.软件犯贱了,卸载就能解决!</string>
    <string name="knowledge_move_success">移动成功,你可以再移动一些!</string>
    <string name="knowledge_move_fail">移动失败,你可以看看情况!</string>
    <string name="common_header_text">到头了!</string>
    <string name="common_footer_text">到底了!</string>
    <string name="common_empty_text">是时候加些知识了!</string>
    <string name="knowledge_tidy_title">整理知识吧!</string>
    <string name="common_text">这是测试用的文本,没代表什么,真的!</string>
    <string name="dialog_insert_title">增加点什么?</string>
    <string name="dialog_update_title">要修改了吗?</string>
    <string name="common_cancel_text">取消</string>
    <string name="common_determine_text">确定</string>
    <string name="common_move_text">移动</string>
    <string name="dialog_advanced_title">知识进阶</string>
    <string name="advanced_ask">进阶要求</string>
    <string name="advanced_count">进阶次数</string>
    <string name="advanced_name">阶级称呼</string>
    <string name="advanced_size">知识大小</string>
    <string name="advanced_quality">知识质量</string>
    <string name="advanced_seniority">资质</string>
    <string name="advanced_master">精通</string>
    <string name="common_advanced_text">进阶</string>
    <string name="advanced_info">升阶信息</string>
    <string name="knowledge_advanced_size_hint">知识的数量还不够,还要更多才行!</string>
    <string name="knowledge_advanced_quality_hint">知识的质量不行,是做不了武器的!</string>
    <string name="knowledge_advanced_master_hint">自身能力不够,是不能掌握好知识的!</string>
    <string name="knowledge_advanced_seniority_hint">没有获取相应的资格,贸然提升有危险!</string>
    <string name="knowledge_advanced_full_hint">到顶</string>
    <string name="knowledge_advanced_title">进阶吧,boy!</string>

    <!--进阶知识-->
    <string name="knowledge_advanced_empty">如果一定要这样,当初就不应该进来!</string>
    <string name="knowledge_advanced_equals">r如果一成不变,那还有什么要变!</string>
    <string name="knowledge_advanced_empty_hint">既然知道没有任何知识,还不快点做些什么!</string>

    <!--知识里程-->
    <string name="knowledge_mileage_title">这是知识的一生</string>
    <!--框架输出-->
    <string name="setting_presenter_null">presenter未初始化!</string>
    <string name="setting_view_null">view未初始化!</string>

    <!--个人中心-->
    <string name="common_mine_title">数据中心</string>
</resources>