<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/width_10dp"
    android:background="@drawable/border_while_line_shape"
    android:layout_margin="@dimen/width_44dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_examine_title"
        android:textSize="@dimen/size_18sp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"/>
    <ImageView
        android:id="@+id/dialog_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/common_close_normal"/>
    <LinearLayout
        android:id="@+id/linear_base"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_close"
        android:layout_marginTop="@dimen/width_10dp"
        android:layout_marginBottom="@dimen/width_10dp">
        <LinearLayout
            android:id="@+id/dialog_update"
            style="@style/dialog_linear_layout">
            <ImageView
                style="@style/dialog_image_view"
                android:src="@drawable/common_update_normal"/>
            <TextView
                style="@style/dialog_text_view"
                android:text="@string/dialog_update_hint"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/dialog_look"
            style="@style/dialog_linear_layout">
            <ImageView
                style="@style/dialog_image_view"
                android:src="@drawable/common_look_normal"/>
            <TextView
                style="@style/dialog_text_view"
                android:text="@string/dialog_look_hint"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/dialog_delete"
            style="@style/dialog_linear_layout">
            <ImageView
                style="@style/dialog_image_view"
                android:src="@drawable/common_delete_normal"/>
            <TextView
                style="@style/dialog_text_view"
                android:text="@string/dialog_delete_hint"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_advanced"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_base"
        android:layout_marginTop="@dimen/width_10dp">
        <LinearLayout
            android:id="@+id/dialog_advanced"
            style="@style/dialog_linear_layout">
            <ImageView
                style="@style/dialog_image_view"
                android:src="@drawable/common_advanced_normal"/>
            <TextView
                style="@style/dialog_text_view"
                android:text="@string/dialog_advanced_hint"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/dialog_tidy"
            style="@style/dialog_linear_layout">
            <ImageView
                style="@style/dialog_image_view"
                android:src="@drawable/common_tidy_normal"/>
            <TextView
                style="@style/dialog_text_view"
                android:text="@string/dialog_tidy_hint"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/dialog_mileage"
            style="@style/dialog_linear_layout">
            <ImageView
                style="@style/dialog_image_view"
                android:src="@drawable/common_mileage_normal"/>
            <TextView
                style="@style/dialog_text_view"
                android:text="@string/dialog_mileage_hint"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>