<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/width_10dp"
    android:background="@drawable/border_while_line_shape"
    android:layout_margin="@dimen/width_10dp">
    <TextView
        android:id="@+id/advanced_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_advanced_title"
        android:textSize="@dimen/size_18sp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"/>
    <TextView
        android:id="@+id/advanced_h1"
        style="@style/common_text_view"
        android:layout_below="@+id/advanced_title"
        android:layout_marginTop="@dimen/width_10dp"
        android:layout_marginBottom="@dimen/width_10dp"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/advanced_information_headline"
        style="@style/common_text_view"
        android:layout_below="@id/advanced_h1"
        android:text="@string/advanced_ask"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/width_10dp"/>
    <GridLayout
        android:id="@+id/advanced_information_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/advanced_information_headline"
        android:columnCount="2"
        android:layout_marginBottom="@dimen/width_10dp">
        <TextView
            android:id="@+id/advanced_count"
            style="@style/common_text_view"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/advanced_count"/>
        <TextView
            android:id="@+id/advanced_name"
            style="@style/common_text_view"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/advanced_name"/>
    </GridLayout>
    <TextView
        android:id="@+id/advanced_ask_headline"
        style="@style/common_text_view"
        android:layout_below="@id/advanced_information_list"
        android:text="@string/advanced_ask"
        android:layout_centerHorizontal="true"/>
    <GridLayout
        android:id="@+id/advanced_ask_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/advanced_ask_headline"
        android:columnCount="2"
        android:layout_marginBottom="@dimen/width_10dp">
        <TextView
            android:id="@+id/advanced_size"
            style="@style/common_text_view"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/advanced_size"/>
        <TextView
            android:id="@+id/advanced_quality"
            style="@style/common_text_view"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/advanced_quality"/>

    </GridLayout>
</RelativeLayout>