<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/width_10dp"
    android:background="@drawable/border_while_line_shape"
    android:layout_margin="@dimen/width_44dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_insert_title"
        android:textSize="@dimen/size_18sp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"/>
    <ImageView
        android:id="@+id/dialog_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/common_close_normal"/>
    <EditText
        android:id="@+id/dialog_insert_edit"
        style="@style/common_edit_view"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_close"
        android:layout_marginTop="@dimen/width_10dp"
        android:layout_marginBottom="@dimen/width_10dp"
        android:hint="@string/knowledge_insert_hint"
        android:minHeight="@dimen/width_44dp"
        android:gravity="center_vertical"/>
    <LinearLayout
        android:layout_below="@id/dialog_insert_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/dialog_cancel"
            style="@style/common_text_view"
            android:text="@string/common_cancel_text"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/width_10dp"
            android:paddingTop="@dimen/width_10dp"
            android:paddingBottom="@dimen/width_10dp"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/dialog_determine"
            style="@style/common_text_view"
            android:text="@string/common_determine_text"
            android:layout_weight="1"
            android:paddingTop="@dimen/width_10dp"
            android:paddingBottom="@dimen/width_10dp"
            android:gravity="center"/>
    </LinearLayout>
</RelativeLayout>